feat(index.html): add and link a css file

--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="heading">Odin Recipes</h1>
     <section>
-        <figure>
+        <figure class="image-container">
             <img src="recipes/recipe_images/Header.jpg" loading="lazy" alt="image of a Chef">
         </figure>
         <figcaption>Chef: Manueldezman</figcaption>
     </section>
-    <section>
-        <h3>Checkout our Recipes!</h3>
-        <ul>
+    <section class="recipe-container">
+        <h3 class="recipe-list header">Checkout our Recipes!</h3>
+        <ul class="recipe-list list">
             <li><a href="recipes/pancake.html">Buttermilk Pumpkin Pancakes</a></li>
             <li><a href="recipes/pizza.html">Breakfast Tortilla Pizza</a></li> 
             <li><a href="recipes/oatmeal.html">Peanut Butter Oatmeal</a></li> 
