--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1 class="heading">Odin Recipes</h1>
     <section>
         <figure class="image-container">
-            <img src="recipes/recipe_images/Header.jpg" loading="lazy" alt="image of a Chef">
+            <img class="image" src="recipes/recipe_images/Header.jpg" loading="lazy" alt="image of a Chef">
         </figure>
         <figcaption>Chef: Manueldezman</figcaption>
     </section>
