style: add css style selector to recipe html files
i addedd css style selectors to oatmeal.html, pancake.html and pizza.html files

--- a/recipes/oatmeal.html
+++ b/recipes/oatmeal.html
@@ -6,18 +6,18 @@
     <title>Peanut Butter Oatmeal recipe</title>
 </head>
 <body>
-    <hi>Peanut Butter Oatmeal</hi>
-    <section>
-        <figure>
+    <hi class="heading">Peanut Butter Oatmeal</hi>
+    <section class="image-container">
+        <figure class="image-wrapper">
             <img src="recipe_images/oatmeal.jpeg" loading="lazy" alt="image of a Peanut butter Oatmeal">
         </figure>
-        <figcaption>A freshly prepared Peanut Butter Oatmeal</figcaption>
+        <figcaption class="image-caption">A freshly prepared Peanut Butter Oatmeal</figcaption>
     </section>
-    <article>
+    <article class="description">
         <h3>Description</h3>
         <p>This quick and easy peanut butter oatmeal, flavored with cinnamon and vanilla and topped with honey and walnuts, can be customized to your taste.</p>
     </article>
-    <section>
+    <section class="ingredients">
         <h3>Ingredients</h3>
         <ul>
             <li>1 cup 1% milk</li>
@@ -31,7 +31,7 @@
             <li>1 tablespoon chopped walnuts(optional)</li>
         </ul>
     </section>
-    <section>
+    <section class="steps">
         <ol>
             <li>Combine milk, sugar, and salt in a saucepan over medium-low heat and bring to a simmer.</li>
             <li>Add cinnamon and oats. Cook over medium-low heat until oats are tender with a bite, about 5 minutes. Use a long spoon to stir, and adjust heat to prevent splattering.</li>
