--- a/recipes/pancake.html
+++ b/recipes/pancake.html
@@ -6,18 +6,18 @@
     <title>Buttermilk Pumpkin Pancakes Recipe</title>
 </head>
 <body>
-    <h1>Buttermilk Pumpkin Pancakes</h1>
-    <section>
-        <figure>
+    <h1 class="heading">Buttermilk Pumpkin Pancakes</h1>
+    <section class="image-container">
+        <figure class="image-wrapper">
             <img src="recipe_images/pancake.jpeg" alt="A picture of a Buttermilk Pumpkin Pancake" loading="lazy"/>
         </figure>
-        <figcaption>Freshly prepared Buttermilk Pumpkin Pancake</figcaption>
+        <figcaption class="image-caption">Freshly prepared Buttermilk Pumpkin Pancake</figcaption>
     </section>
-    <article>
+    <article class="description">
         <h3>Description</h3>
         <p>hese buttermilk pumpkin pancakes are especially great for cold fall/winter mornings! Serve with syrup</p>
     </article>
-    <section>
+    <section class="ingredients">
         <h3>Ingredients</h3>
         <ul>
             <li>1 cup all-purpose flour</li>
@@ -34,7 +34,7 @@
             <li>1 serving nonstick cooking spray</li>
         </ul>
     </section>
-    <section>
+    <section class="steps">
         <h3>Steps</h3>
         <ol>
             <li>Whisk flour, sugar, pumpkin pie spice, baking powder, baking soda, and salt together in a large bowl. Whisk in buttermilk, pumpkin, oil, eggs, and vanilla extract until well blended.</li>
