--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -6,18 +6,18 @@
     <title>Breakfast Tortilla Pizza Recipe</title>
 </head>
 <body>
-    <h1>Breakfast Tortilla Pizza</h1>
-    <section>
-        <figure>
+    <h1 class="heading">Breakfast Tortilla Pizza</h1>
+    <section class="inage-container">
+        <figure class="image-wrapper">
             <img src="recipe_images/pizza.jpeg" loading="lazy" alt="image of a freshly prepared Tortilla Pizza">
         </figure>
-        <figcaption>A Freshly prepared Breakfast Tortilla Pizza</figcaption>
+        <figcaption class="image-caption">A Freshly prepared Breakfast Tortilla Pizza</figcaption>
     </section>
-    <article>
+    <article class="description">
         <h3>Description</h3>
         <p>This hearty breakfast tortilla pizza could not be easier! Think breakfast burrito with a toasty outside. It's perfect for feeding kids and they can customize their own breakfast pizza as they like.</p>
     </article>
-    <section>
+    <section class="ingredients">
         <h3>Ingredients</h3>
         <ul>
             <li>1/2 tablespoon butter, softened</li>
@@ -28,7 +28,7 @@
             <li>1/2 cup total assorted toppings, such as cheese, hot sauce, cooked meat or veggies</li>
         </ul>
     </section>
-    <section>
+    <section class="steps">
         <h3>Steps</h3>
         <ol>
             <li>Preheat the oven to 350 degrees F (175 degrees C).</li>
