feat: style the recipe webpages with css
-I added recipe.css file to style the recipe webpages
-I linked the recipe webpages with the recipe.css file
-i also fixed wrong spellings in the recipe webpages

--- a/recipes/oatmeal.html
+++ b/recipes/oatmeal.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Peanut Butter Oatmeal recipe</title>
+    <link rel="stylesheet" href="recipe.css"/>
 </head>
 <body>
-    <hi class="heading">Peanut Butter Oatmeal</hi>
+    <h1 class="heading">Peanut Butter Oatmeal</h1>
     <section class="image-container">
         <figure class="image-wrapper">
             <img src="recipe_images/oatmeal.jpeg" loading="lazy" alt="image of a Peanut butter Oatmeal">
@@ -32,6 +33,7 @@
         </ul>
     </section>
     <section class="steps">
+        <h3>Steps</h3>
         <ol>
             <li>Combine milk, sugar, and salt in a saucepan over medium-low heat and bring to a simmer.</li>
             <li>Add cinnamon and oats. Cook over medium-low heat until oats are tender with a bite, about 5 minutes. Use a long spoon to stir, and adjust heat to prevent splattering.</li>
