--- a/recipes/pancake.html
+++ b/recipes/pancake.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buttermilk Pumpkin Pancakes Recipe</title>
+    <link rel="stylesheet" href="recipe.css"/>
 </head>
 <body>
     <h1 class="heading">Buttermilk Pumpkin Pancakes</h1>
@@ -15,7 +16,7 @@
     </section>
     <article class="description">
         <h3>Description</h3>
-        <p>hese buttermilk pumpkin pancakes are especially great for cold fall/winter mornings! Serve with syrup</p>
+        <p>These buttermilk pumpkin pancakes are especially great for cold fall/winter mornings! Serve with syrup</p>
     </article>
     <section class="ingredients">
         <h3>Ingredients</h3>
