added inline styling to index.html file

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <h1 class="heading">Odin Recipes</h1>
+    <h1 class="heading" color="blue">Odin Recipes</h1>
     <section>
         <figure class="image-container">
             <img class="image" src="recipes/recipe_images/Header.jpg" loading="lazy" alt="image of a Chef">
         </figure>
-        <figcaption>Chef: Manueldezman</figcaption>
+        <figcaption color="cyan">Chef: Manueldezman</figcaption>
     </section>
     <section class="recipe-container">
         <h3 class="recipe-list header">Checkout our Recipes!</h3>
