--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Breakfast Tortilla Pizza Recipe</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Freeman&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Single+Day&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="recipe.css"/>
 </head>
 <body>
