feat: Add a link that redirect users to homepage

--- a/recipes/pancake.html
+++ b/recipes/pancake.html
@@ -46,6 +46,10 @@
             <li>Spray a large nonstick griddle or skillet with cooking spray. Heat over medium heat.</li>
             <li>Pour batter by scant 1/3 cupfuls into the hot skillet, working in batches. Cook until bubbles form on the surface of pancakes and bottoms are lightly browned, about 1 1/2 minutes per side. Repeat with remaining batter, spraying the skillet with cooking spray between batches as needed. Serve warm.</li>
         </ol>
+        <div>
+            <a href="../index.html" rel="noreferrer" >Back to homepage</a>
+        </div>
     </section>
+
 </body>
 </html>
