--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -40,7 +40,11 @@
             <li>Rub butter along the bottom and sides of a 8 or 9 inch cake pan.  Press tortilla down into the buttered pan and against the sides. Crack each egg next to each other on the tortilla.  Sprinkle with salt and pepper and add desired toppings evenly on top.</li>
             <li>Bake in the preheated oven until egg whites are set and tortilla has become lightly browned and toasted along the edges and bottom, 13 to 15 minutes.</li>
         </ol>
+        <div>
+            <a href="../index.html" rel="noreferrer" >Back to homepage</a>
+        </div>
     </section>
+    
     
 </body>
 </html>
