--- a/recipes/oatmeal.html
+++ b/recipes/oatmeal.html
@@ -43,6 +43,10 @@
             <li>Add cinnamon and oats. Cook over medium-low heat until oats are tender with a bite, about 5 minutes. Use a long spoon to stir, and adjust heat to prevent splattering.</li>
             <li>Remove from heat; stir in vanilla and peanut butter. Serve in a large bowl, and top with honey and walnuts.</li>
         </ol>
+        <div>
+            <a href="../index.html" rel="noreferrer" >Back to homepage</a>
+        </div>
     </section>
+
 </body>
 </html>
